--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "test": " wdio ./node_modules/.bin/wdio.conf.js"
+    "test": " wdio ./wdio.conf.js"
   },
   "author": "",
   "license": "ISC",
