--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
     "wdio-dot-reporter": "0.0.8",
+    "wdio-junit-reporter": "^0.3.0",
     "wdio-mocha-framework": "^0.5.10",
     "wdio-phantomjs-service": "^0.2.2",
     "wdio-selenium-standalone-service": "0.0.9",
