--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
+    "chai": "^4.1.1",
     "wdio-dot-reporter": "0.0.8",
     "wdio-junit-reporter": "^0.3.0",
     "wdio-mocha-framework": "^0.5.10",
